cmake_minimum_required(VERSION 3.25)
project(AdventOfCode)

set(CMAKE_CXX_STANDARD 23)

add_executable(AdventOfCode C++/main.cpp C++/File.cpp C++/2015/Day1/DayOne.cpp C++/2015/Day2/DayTwo.cpp C++/2015/Day3/DayThree.cpp C++/2015/Day4/DayFour.cpp C++/2015/Day5/DayFive.cpp C++/2015/Day6/DaySix.cpp C++/2022/Day1/AdventOne.cpp C++/2022/Day2/AdventTwo.cpp C++/2022/Day3/AdventThree.cpp C++/2022/Day4/AdventFour.cpp C++/2022/Day5/AdventFive.cpp C++/2022/Day6/AdventSix.cpp C++/2022/Day7/AdventSeven.cpp C++/2015/Day4/lib/md5.cpp C++/StringUtils.cpp C++/2015/Day7/DaySeven.cpp C++/2015/Day8/DayEight.h C++/2015/Day8/DayEight.cpp C++/2015/Day9/DayNine.h C++/2015/Day9/DayNine.cpp C++/2015/Day10/DayTen.h C++/2015/Day10/DayTen.cpp C++/2015/Day11/DayEleven.h C++/2015/Day11/DayEleven.cpp C++/2015/Day11/reverser.h C++/2015/Day12/DayTwelve.h C++/2015/Day12/DayTwelve.cpp C++/2015/Day13/DayThirteen.h C++/2015/Day13/DayThirteen.cpp)
